compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_chained.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module a export b module b export c module c export d\n    var d : int\nend c end b end a\nvar k := a.b.c.d\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 25..26) [Module(No)]: <error>
"c"@(FileId(1), 43..44) [Module(No)]: <error>
"d"@(FileId(1), 62..63) [ConstVar(Var, No)]: int
"k"@(FileId(1), 92..93) [ConstVar(Var, No)]: int
"d"@(FileId(1), 52..53) [Export]: int
"c"@(FileId(1), 34..35) [Export]: <error>
"b"@(FileId(1), 16..17) [Export]: <error>
"<root>"@(dummy) [Module(No)]: <error>

