compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_export_not_mut.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module a export b, var c\n    var b : int\n    const c : int := 1\nend a\na.b := 1\na.c := 2\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 33..34) [ConstVar(Var, No)]: int
"c"@(FileId(1), 51..52) [ConstVar(Const, No)]: int
"b"@(FileId(1), 16..17) [Export]: int
"c"@(FileId(1), 23..24) [Export]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 74..76): cannot assign into `b`
| error for (FileId(1), 70..73): `b` is not exported as `var`
| note for (FileId(1), 16..17): `b` exported from here
error at (FileId(1), 83..85): cannot assign into `c`
| error for (FileId(1), 79..82): `c` is a reference to a constant, not a variable
| note for (FileId(1), 51..52): `c` declared here
