compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_no_exports.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module no end no\nvar k := no.exports\n"
---
"no"@(FileId(1), 7..9) [Module(No)]: <error>
"k"@(FileId(1), 21..22) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 29..36: no field named `exports` in expression
| error in file FileId(1) for 29..36: no field named `exports` in here
