compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_normal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module a\n    export b\n    var b : int\nend a\nvar c := a.b"
---
"a"@"src/main.t:7..8" [Module(No)]: <error>
"b"@"src/main.t:30..31" [ConstVar(Var, No)]: int
"c"@"src/main.t:48..49" [ConstVar(Var, No)]: int
"b"@"src/main.t:20..21" [Export]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
