compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_not_exported.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module a export b var b : int end a\nvar k := a.c\n"
---
"a"@"src/main.t:7..8" [Module(No)]: <error>
"b"@"src/main.t:22..23" [ConstVar(Var, No)]: int
"k"@"src/main.t:40..41" [ConstVar(Var, No)]: <error>
"b"@"src/main.t:16..17" [Export]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:47..48: no field named `c` in expression
| error for src/main.t:47..48: no field named `c` in here
