compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_unqualified_export_lhs_not_mut.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "% crashed because we we weren't poking through resolution\nmodule indirection\n    export ~. lhs\n    module lhs\n        export field\n        var field : int\n    end lhs\nend indirection\n\n% triggers `exporting_def` with an indirect lhs def\nlhs.field := 6\n"
---
"indirection"@"src/main.t:65..76" [Module(No)]: <error>
"lhs"@"src/main.t:106..109" [Module(No)]: <error>
"field"@"src/main.t:143..148" [ConstVar(Var, No)]: int
"field"@"src/main.t:125..130" [Export]: int
"lhs"@"src/main.t:91..94" [Export]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:246..248: cannot assign into `field`
| error for src/main.t:236..245: `field` is not exported as `var`
| note for src/main.t:125..130: `field` exported from here
