compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_unqualified_export_mutability.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module a export ~. var b\n    var b : int\nend a\nb := 2"
---
"a"@"src/main.t:7..8" [Module(No)]: <error>
"b"@"src/main.t:33..34" [ConstVar(Var, No)]: int
"b"@"src/main.t:23..24" [Export]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
