compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_alias_of_set.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var *_ : boolean\n\nmodule m\n    export opaque s, var a\n    type s : set of boolean\n    var a := s(true)\n    _ := true in a\nend m\n\n% should fail\nvar vs := m.s(false)\n_ := false in m.a\n"
---
"_"@"src/main.t:5..6" [ConstVar(Var, No)]: boolean
"m"@"src/main.t:25..26" [Module(No)]: <error>
"s"@"src/main.t:63..64" [Type]: opaque[DefId(PackageId(0), LocalDefId(2))] type to set[DefId(PackageId(0), LocalDefId(3))] of boolean
"s"@"src/main.t:67..81" [Set]: <error>
"a"@"src/main.t:90..91" [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(2))] type to set[DefId(PackageId(0), LocalDefId(3))] of boolean
"vs"@"src/main.t:147..149" [ConstVar(Var, No)]: <error>
"s"@"src/main.t:45..46" [Export]: opaque[DefId(PackageId(0), LocalDefId(2))] type to set[DefId(PackageId(0), LocalDefId(3))] of boolean
"a"@"src/main.t:52..53" [Export]: opaque[DefId(PackageId(0), LocalDefId(2))] type to set[DefId(PackageId(0), LocalDefId(3))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:153..156: cannot call or subscript `s`
| note for src/main.t:153..156: this is of type `s (an opaque type)`
| error for src/main.t:153..156: `s (an opaque type)` is not callable
error at src/main.t:175..177: mismatched types for `in`
| note for src/main.t:178..181: this is of type `s (an opaque type)`
| error for src/main.t:178..181: `s (an opaque type)` is not a set type
| info: operand must be a set
